Mesh: support face-maps when joining

Resolves T64320