source/blender/blenkernel/intern/object_facemap.c
@@ -261,3 +261,41 @@ bFaceMap *BKE_object_facemap_find_name(Object *ob, const char *name)
 {
   return BLI_findstring(&ob->fmaps, name, offsetof(bFaceMap, name));
 }
+
+int *BKE_object_facemap_index_map_create(Object *ob_src, Object *ob_dst, int *r_map_len)
+{
+  /* Build src to merged mapping of facemap indices. */
+  if (BLI_listbase_is_empty(&ob_src->fmaps) || BLI_listbase_is_empty(&ob_dst->fmaps)) {
+    *r_map_len = 0;
+    return NULL;
+  }
+
+  *r_map_len = BLI_listbase_count(&ob_src->fmaps);
+  int *fmap_index_map = MEM_malloc_arrayN(
+      *r_map_len, sizeof(*fmap_index_map), "defgroup index map create");
+  bool is_fmap_remap_needed = false;
+
+  int i = 0;
+  for (bFaceMap *fmap_src = ob_src->fmaps.first; fmap_src; fmap_src = fmap_src->next, i++) {
+    fmap_index_map[i] = BKE_object_facemap_name_index(ob_dst, fmap_src->name);
+    is_fmap_remap_needed = is_fmap_remap_needed || (fmap_index_map[i] != i);
+  }
+
+  if (!is_fmap_remap_needed) {
+    MEM_freeN(fmap_index_map);
+    fmap_index_map = NULL;
+    *r_map_len = 0;
+  }
+
+  return fmap_index_map;
+}
+
+void BKE_object_facemap_index_map_apply(int *fmap, int fmap_len, const int *map, int map_len)
+{
+  if (map == NULL || map_len == 0) {
+    return;
+  }
+  for (int i = 0; i < fmap_len; i++, fmap++) {
+    *fmap = (*fmap < map_len && *fmap != -1) ? map[*fmap] : -1;
+  }
+}
